# tinyexpr-rs

./: .gitignore  Cargo.toml  LICENSE  Readme.md
.github/workflows/: ci.yml
examples/: basic.rs  functions.rs
src/: ast.rs  context.rs  expr.rs  function.rs  lib.rs  token.rs
tests/: parser.rs
